# VCR

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  BUILD_APPLE_SILICON.md  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_CUSTODIAN.md  README.backup.2026-02-10.md  README.md  SKILL.md  STEERABILITY.md  VCR_BRIEF_TEMPLATE.md  VCR_SOP.md  agent_manifest.yaml  build.rs  entrance.vcr  extract_jcvd.py  geist_showcase.vcr  go.mod  go.sum  render_frames.py  sanity_check.vcr  test_pulse.mov.metadata.json  test_pulse.vcr  vcr-render-planner.skill
.agent/workflows/: vcr-on-alpha.md  vcr-verify-framing.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: baseline.yml  ci.yml
.skills-recon/: adoption_map.yaml  candidate_skills.yaml  install_commands.sh
.skills/vcr-ascii-pipeline/: SKILL.md
.skills/vcr-debugger/: SKILL.md
benches/: render_frame.rs
cmd/init-db/: main.go
docs/: AGENT_IDENTITY.md  ANIMATION_ENGINE.md  ARCHITECTURE.md  ASCII_CAPTURE.md  ASCII_CAPTURE_MILESTONE.md  ASCII_CO_UK_IMPORT.md  ASCII_RENDERER_SPEC.md  ASCII_SOURCES.md  ASCII_STAGE.md  ASSETS.md  BENCHMARK_REPORT.md  CHAT_RENDER.md  DELETIONS.md  DETERMINISM_SPEC.md  EXIT_CODES.md  LIBRARY.md  PACKS.md  PARAMS.md  PLAYGROUND.md  PRD.md  PROJECT_CUSTODIAN.md  PROMPT_GUIDE.md  REPRODUCIBLE_BUILD.md  SKILLS_PROTOCOL.md  STDLIB_ALPHA.md  VCR_VERIFICATION.md  ascii_determinism_spec.md  ascii_foundations.md  ascii_history.md  ascii_perception_and_density.md  ascii_rendering_architecture.md  ascii_research_takeaways.md  ascii_video_and_motion.md  deep-research-report.md  figma-vcr-output-quality-polish-2026-02-10.md  goth_crt_pass_notes.md  sanity_check_clean.webm  user_onboarding.md
examples/: README.md  README_ASCII_RELEASE.md  ai_company_hero.vcr  alpha_opacity_test.vcr  ascii_animation_boilerplate.rs  demo_scene.vcr  distort.wgsl  distort_sphere.vcr  dreamcore_3d_alpha.vcr  element_column.vcr  element_column_v3.vcr  element_eye.vcr  element_eye_v3.vcr  element_hex_sigil.vcr  element_hex_sigil_v3.vcr  element_orbiting_dots.vcr  element_orbiting_dots_v3.vcr  element_pyramid.vcr  element_sacred_rings.vcr  element_sacred_rings_v3.vcr  envelope_scene.vcr  fuck_yeah_explode_intro.vcr  geist_commercial.vcr  geist_pixel_waving_hand.vcr  glass_panel.vcr  global_params_scene.vcr  group_wobble_scene.vcr  hello_world.vcr  instrument_grid.vcr  instrument_logo_reveal.vcr  instrument_typography.vcr  lower_third_brief_skeleton.vcr  physics_handshake.rs  release_01_logo_reveal.vcr  release_02_primitives.vcr  release_03_wave.vcr  release_04_text_montage.vcr  release_05_shader.vcr  release_06_closing.vcr  release_ascii_grid_morph.vcr  (+51 more)
experiments/: character_density_analysis.rs  frame_to_ascii_pipeline_prototype.rs  luminance_to_char_mapping_test.rs
integrations/: README.md
manifests/: ascii_post_debug.vcr  colton_batts_end_credits_scroll_alpha.vcr  colton_batts_lower_third.vcr  dreamcore_circle.vcr  eye_alpha.vcr  globe.wgsl  hello.vcr  jcvd.vcr  moire_sphere.vcr  new_occult_pack.prompt.normalized.yaml  new_occult_pack.prompt.resolved.normalized.yaml  new_occult_pack.request.resolved.yaml  occult_eye_pyramid.prompt.normalized.yaml  occult_eye_pyramid.prompt.resolved.normalized.yaml  occult_eye_pyramid.request.resolved.yaml  occult_eye_pyramid.vcr  occult_pyramid.vcr  oracle_globe.vcr  penrose_triangle.vcr  post_levels_example.vcr  pyramid_alpha.vcr  relic_hand_orb.vcr  sigil_compass.vcr  techie_globe.wgsl  torus_knot.vcr  torus_knot_colored.vcr  vcr_crt_glow.vcr  vcr_welcome_card.vcr  vercel_logo.vcr  welcome_globe.vcr  worldwide.vcr  worldwide_text.vcr  worldwide_v2.vcr
rapier-three-boilerplate/: tsconfig.json
scripts/: ascii_link_overlay.sh  baseline_report.sh  batch_render_emojis.py  install.sh  lib_export.sh  pack_contact_sheet.py  pack_contact_sheet.sh  run_playground.sh  vcr_contact_sheet.py  vcr_preview.sh
shaders/: dreamcore_eye.wgsl  orbiting_dots.wgsl
src/: agent_errors.rs  agent_metadata.rs  animation_engine.rs  ascii.rs  ascii_atlas.rs  ascii_atlas_data.rs  ascii_capture.rs  ascii_frame.rs  ascii_pipeline.rs  ascii_render.rs  ascii_renderer.rs  ascii_sources.rs  ascii_stage.rs  aspect_preset.rs  asset_catalog.rs  channel_displacement.rs  chat.rs  decoding.rs  encoding.rs  error_codes.rs  font_assets.rs  lib.rs  library.rs  main.rs  manifest.rs  play.rs  post_process.rs  prompt_gate.rs  renderer.rs  sandbox.rs  schema.rs  timeline.rs
tests/: agent_error_reporting.rs  aspect_preset_determinism.rs  cli_contract.rs  determinism.rs  font_assets.rs  golden_manifest_stability.rs  library_cli.rs  pack_compile_cli.rs  params_reliability.rs  security_tests.rs  sequence_determinism.rs  spec_compliance.rs  tape_cli.rs  wgpu_shader_smoke.rs
threejs_renderer/: package-lock.json  package.json  render_dreamcore_circle.js  render_dreamcore_pack.js  render_pyramid.js  render_to_mov.sh
vhs-tape-deck/: README.md  go.mod  go.sum
(+790 files in other folders)
