[package]
name = "vcr"
version = "0.1.1"
edition = "2021"
description = "VCR (Video Component Renderer): headless, local-first motion graphics compiler"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pollster = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tiny-skia = "0.11"
url = "2.5"
wgpu = { version = "0.20", default-features = false, features = ["metal", "wgsl"] }
fontdue = "0.9"
notify = "6.1"
winit = "0.29"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
rapier3d = "0.19.0"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "render_frame"
harness = false

# figma-vcr-workflow is the only additional binary (integrations)
