[package]
name = "vcr"
version = "0.1.2"
edition = "2021"
description = "VCR (Video Component Renderer): headless, local-first motion graphics compiler"
license = "MIT"

[features]
default = []
sidecar_ffmpeg = ["dep:ffmpeg-sidecar"]
wgpu_layers = []
play = ["dep:winit", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:notify"]
workflow = ["dep:reqwest", "tokio/macros", "tokio/rt-multi-thread", "tokio/net"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ffmpeg-sidecar = { version = "2.4", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pollster = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
sha2 = "0.10"
tokio = { version = "1", optional = true }
tiny-skia = "0.11"
url = "2.5"
wgpu = { version = "0.20", default-features = false, features = ["metal", "wgsl"] }
fontdue = "0.9"
notify = { version = "6.1", optional = true }
winit = { version = "0.29", optional = true }
egui = { version = "0.28", optional = true }
egui-wgpu = { version = "0.28", optional = true }
egui-winit = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
rapier3d = "0.19.0"


[[bench]]
name = "render_frame"
harness = false

# figma-vcr-workflow is the only additional binary (integrations)
